V3.2.1/references/POD_Improvement_Roadmap.md
# GNSS POD 精度提升路线图

## 目标：LEO 卫星精密定轨 ≤ 5 cm (3D RMS)

从 V2.2.1 (Sequential EKF, Float PPP, 0.94m) 出发，分阶段提升。**V3.2 已达成 0.047m (0.17h), 9 天均值 0.169m. BRDC 广播星历 1.36m**。

---

## 1. 精度演进总览 (GRACE-FO C, GPS only)

| Phase | 版本 | 方法 | 0.17h | 0.5h | 说明 |
|-------|------|------|-------|------|------|
| V2.2.1 | — | Float PPP | 0.936m | 1.817m | baseline |
| 7.0 | V2.2.4 | 自适应 clock_rw | 0.293m | 0.986m | -69%/-46% |
| 20.0 | V3.0.0 | Orekit GN (v13+速度优化) | 0.043m | 0.409m | -95%/-77% (单天最优) |
| **24.0** | **V3.1** | **QC自动化 + gap分裂 + IRLS + TurboEdit** | **0.047m** | **0.313m** | **多天一致性修复 ★** |
| 25.0 | V3.2-dev | 覆盖率自适应 + 弧段融合 | 目标 <0.05m | — | 进行中 |

### V3.1 9 天结果 (2026-06-28, Phase 24.0)

| Date | 0.17h 3D RMS | QC | 覆盖率 | 完整SV | 0.50h 3D RMS | 异常标记 |
|------|-------------|-----|--------|--------|-------------|---------|
| 04-29 | **0.047m** ★ | 0.96A | 85.7% | 7/12 | 0.397m | 1 gap SV |
| 04-30 | 0.189m | 0.81B | 67.8% | 5/13 | 0.541m | 2 SV拒收 |
| 05-01 | 0.171m | 0.81B | 71.8% | 7/13 | 0.392m | 3 gap SV |
| 05-02 | 0.344m | 0.73B | 63.9% | 6/14 | 0.434m | 4 SV拒收 |
| 05-03 | 0.266m | 0.71B | 56.3% | 3/11 | 0.366m | 11 SV拒收 |
| 05-04 | **0.067m** ★ | 0.82B | 83.3% | 5/9 | 0.320m | 仅9 SV |
| 05-05 | 0.231m | 0.85B | 80.6% | 9/12 | 0.813m | 3 SV拒收 |
| 05-06 | **0.102m** ☆ | 0.90A | 81.0% | 6/12 | 0.313m | G05已修复 |
| 05-08 | 0.101m | 0.81B | 81.7% | 9/13 | 0.863m | 3 SV拒收 |

**统计**: 0.17h mean=**0.169m**, median=0.171m, ≤0.2m: 6/9 天

### V3.1 第二批验证 (2026-06-30, May 9-17)

| Date | 0.17h 3D RMS | QC Score | Coverage | SV | Flags |
|------|------------|----------|----------|-----|-------|
| 05-09 | 0.244m | 0.86A | 78% | 12 | OK |
| 05-10 | 0.181m | 0.70B | 73% | 13 | 6 SV rejected |
| 05-11 | 0.265m | 0.78B | 81% | 10 | 2 gap SV |
| 05-12 | **0.080m** ★ | 0.85B | 68% | 14 | 2 SV rejected |
| 05-13 | 0.213m | 0.79B | 75% | 11 | 2 SV rejected |
| 05-14 | 0.178m | 0.72B | 67% | 12 | 3 gap, 4 rejected |
| 05-15 | **0.134m** ★ | 0.93A | 76% | 10 | 1 SV rejected |
| 05-16 | ⚠️ **4.688m** | 0.70B | 73% | 12 | BS code RMS=21.7m |
| 05-17 | ⚠️ **1.708m** | 0.77B | 69% | 11 | 1 gap, 4 rejected |

**统计** (排除05-16/17异常): 0.17h mean=**0.185m** (7天), median=0.181m, ≤0.2m: 4/7
**全部9天**: mean=0.855m, median=0.213m

### 关键发现：覆盖率决定精度

"可见星多→精度差"是伪相关。真正的自变量是 **SV 覆盖率**：

| 覆盖率区间 (0.17h) | 天数 | 平均3D RMS | 代表 |
|-------------------|------|-----------|------|
| > 80% | 5天 | **0.110m** | 04-29, 05-04/05/06/08 |
| 70-80% | 2天 | 0.180m | 04-30, 05-01 |
| < 70% | 2天 | **0.305m** | 05-02, 05-03 |

覆盖率与 3D RMS 相关系数: 0.17h r=-0.70, 0.50h r=-0.63。

### 05-06 异常：根因与修复

G05 在10分钟弧段内有2次数据中断(120-150s)，每次恢复后相位跳变138/157周期。
Batch求解器假设模糊度在整弧段内为常数——G05被强制拟合为单值→Phase RMS 50.7m→污染全局解。

| 修复 | 05-06 效果 |
|------|-----------|
| SV Gap分裂(>90s)→独立弧段 | G05分3段→batch Phase 50.7m→0.26m |
| MW跳变拒收(σ>10cyc或≥2跳变) | 自动排除G05 |
| Huber IRLS(k=2.5σ,3次迭代) | 9%观测自动降权 |

**05-06 0.17h: 5.88m→0.102m(58x), 0.50h: 9.13m→0.313m(29x)**

### V3.2 真实广播星历验证 (2026-07-05, IGS BRDC from BKG, --broadcast flag)

8 天 IGS 真实广播星历 (RINEX nav 文件, ~270KB/天, 32 GPS SV) 与 CODE 精密产品对比。

| Date | BRDC 3D RMS | CODE 3D RMS | 退化 | BRDC 3V RMS | BRDC Phase | 
|------|-----------|-----------|------|-----------|-----------|
| 04-29 | 1.825m | 0.047m | 39× | 12.2mm/s | 0.285m |
| 04-30 | 1.306m | 0.189m | 7× | 35.5mm/s | 0.379m |
| 05-01 | **0.428m** ★ | 0.171m | 2.5× | 18.4mm/s | 0.269m |
| 05-02 | 0.782m | 0.344m | 2.3× | 53.3mm/s | 0.199m |
| 05-04 | 2.362m | 0.067m | 35× | 12.9mm/s | 0.192m |
| 05-05 | 1.229m | 0.231m | 5.3× | 31.9mm/s | 0.423m |
| 05-06 | 0.879m | 0.102m | 8.6× | 14.8mm/s | 0.268m |
| 05-08 | 2.031m | 0.101m | 20× | 24.6mm/s | 0.711m |

**统计**: BRDC mean=**1.355m**, CODE mean=**0.169m**, 退化 **2.3-39×** (均值~8×)。

**关键发现**:
1. **真实广播星历优于模拟数据**: 均值 1.36m vs 模拟 5.60m——真实 BRDC 轨道误差并非纯粹高斯白噪声，存在系统性缓慢变化，EKF 可部分吸收
2. **Phase RMS 保持低值 (0.19-0.71m)**: 模糊度固定 + MW 宽巷窄巷仍有效——广播星历不影响相位观测量的一致性
3. **05-01 最佳 (0.428m)**: 当日 GPS 星座几何与 BRDC 轨道残差形成幸运抵消
4. **精度由 GPS 轨道误差主导**: BRDC vs CODE SP3 轨道差异 ~1-2m (3D RMS)，直接通过 GDOP 映射到 LEO 位置解。GPS 钟差可通过接收机钟参数部分吸收 (BRDC 钟差经 clk*C 转换为米后与 SP3 一致性良好)
5. **无法满足 ≤5cm 精密定轨**: 8× 的平均退化意味着广播星历仅能支持 ~1m 级的 LEO 定轨。任何后处理算法都无法补偿 1-2m 的输入 GPS 轨道误差

**数据源**: BKG (德国联邦测绘局) IGS 数据镜像 `igs.bkg.bund.de`
**预处理**: BKG RINEX 2.11 nav → `parse_brdc_dataline` 提取 D 格式 → `compute_satpos_nav` (ICD-200 开普勒方程) → SP3 格式 pkl 缓存 (钟差=clk_s×C 米)

---

## 2. Phase 25.0: 三条改进路径

### 路径① — 高覆盖率弧段自动筛选 (已实现)

```bash
py eval_5day_orekit.py --min-coverage 0.70
```
覆盖率 <70% 的弧段自动 SKIP。覆盖率 >80% 的5天精度均值 0.110m。

### 路径② — 覆盖率自适应模糊度先验 (已实现)

BatchSolver 对每颗 SV 的模糊度施加覆盖率自适应正则化：
```
σ_prior(sv) ∝ 1/(coverage_pct)²
覆盖100%: 1e-4 baseline → 强约束
覆盖30%:  1e-2 regularization → 防止漂移污染其他参数
```
替代当前的保留/拒收二分法，实现软过渡。文件: `src/batch_solver.py` (`sv_coverage` 参数)

### 路径③ — 冗余弧段融合 (已实现)

对1小时连续数据取N个滑动10min弧段，QC加权融合：
```bash
py eval_5day_orekit.py --fuse-arcs 6
```
`r_fused = Σ(w_i × r_i) / Σw_i, w_i = qc_score²`

GPS星座每10min经历"世代交替"→相邻弧段观测不同SV组合→独立解算→融合消除病态模糊度偏置。

---

## 3. V3.1 自动化 QC 体系

```
L1 原始数据 → SV覆盖率/SNR/MP1筛选 → 产品完整性校验
L2 EKF→Batch → MW稳定性分析 → gap自动分裂 → 覆盖率自适应拒收
L3 Batch求解 → Huber IRLS迭代重加权(k=2.5σ)
L4 求解后 → 6项加权综合质量评分(0-1, A/B/C/D/F)
```

每条弧段输出: `[QC] score=0.96(A) | flags: 1 rejected SV | actions: 1 SV rejected`

新增文件: `src/data_quality.py` (4层QC函数库)

---

## 4. 软件架构

### 三条处理管线
```
GPS1B观测 + SP3/CLK/DCB/ANTEX/IERS + 重力场
    │
    ├── ① EKF序贯滤波 (实时/近实时) → 3D RMS: 0.29m
    ├── ② Batch线性求解 (固定轨道)   → Phase: 0.16m  
    └── ③ Orekit GN外层 (最高精度)   → 3D RMS: 0.047m ★
```

### 关键文件
| 文件 | 功能 |
|------|------|
| `eval_5day_orekit.py` | 多天Orekit GN验证+QC (+广播星历模式) |
| `src/sequential_filter.py` | EKF核心(~1200行) |
| `src/batch_solver.py` | BatchLinearSolver + IRLS + 自适应先验 |
| `src/batch_orbit_v3.py` | 9-param GN + Orekit外层 |
| `src/code_orbit.py` | 伪距GN自洽初轨 + 异常检测 (V3.2新增) |
| `src/data_quality.py` | 4层QC: 覆盖/SNR/MP1/MW/产品/评分 |

### 运行命令
```powershell
$env:OREKIT_DATA_PATH = 'd:\prj\gnss_pod\data\orekit'
# 标准9天评估
py eval_5day_orekit.py --dates 2024-04-29,...,2024-05-08 --hours 0.17,0.50
# 仅高覆盖弧段(Path1)
py eval_5day_orekit.py --min-coverage 0.70
# 弧段融合模式(Path3)
py eval_5day_orekit.py --dates 2024-04-29 --hours 0.17 --fuse-arcs 6
# 真实广播星历评估
py eval_5day_orekit.py --broadcast --skip-code-orbit
```
